# money_guy_car_calculator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: ci_pipeline.yml
application/: app.py  app_functions.py
tests/: test_app_functions.py
